[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/character/Galuh_MC.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/3d_object/house_outside/House_outdoor_environtment.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/script/controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://story/level1/message.gd" type="Script" id=4]
[ext_resource path="res://assets/script/dialog_template.tscn" type="PackedScene" id=5]
[ext_resource path="res://story/level1/intro.gd" type="Script" id=6]
[ext_resource path="res://assets/3d_object/Mini_Object/penanda.tscn" type="PackedScene" id=7]
[ext_resource path="res://story/level1/juru kunci.gd" type="Script" id=8]
[ext_resource path="res://assets/3d_object/Human/juru_kunci/juru_kunci2.tscn" type="PackedScene" id=10]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 1.78823, 2.72315 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 1.54405, 2.31087 )

[sub_resource type="BoxShape" id=4]

[sub_resource type="BoxShape" id=5]

[node name="Spatial" type="Spatial"]
script = ExtResource( 6 )

[node name="House_outdoor_environtment" parent="." instance=ExtResource( 2 )]

[node name="KinematicBody" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.1226, 1.19496, 0 )
collision_mask = 14

[node name="HBoxContainer" parent="." instance=ExtResource( 3 )]

[node name="untitled" parent="." instance=ExtResource( 7 )]
transform = Transform( -0.0196337, 0, -0.999807, 0, 1, 0, 0.999807, 0, -0.0196337, 27.7879, 0.332274, 0 )

[node name="StaticBody" type="StaticBody" parent="untitled"]
transform = Transform( 0.00348995, 0, -0.0999391, 0, 0.1, 0, 0.0999391, 0, 0.00348995, 0, 0, 0 )
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="untitled/StaticBody"]
shape = SubResource( 2 )

[node name="message" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27.7879, 1.78215, 0 )
collision_layer = 8
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="message"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.56171, 0, 0 )
shape = SubResource( 3 )

[node name="Control" parent="message" instance=ExtResource( 5 )]
visible = false

[node name="juru kunci" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.654848, 2.37684 )
collision_layer = 8
script = ExtResource( 8 )

[node name="untitled" parent="juru kunci" instance=ExtResource( 10 )]
transform = Transform( -0.499887, 0, -0.0106719, 0, 0.5, 0, 0.0106719, 0, -0.499887, -0.489446, 0.747907, -0.294328 )

[node name="CollisionShape" type="CollisionShape" parent="juru kunci"]
shape = SubResource( 4 )

[node name="Control" parent="juru kunci" instance=ExtResource( 5 )]
visible = false

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 0.2, 0, 0, 0, 1, 0, 0, 0, 2.3, -3, 0, 0 )
shape = SubResource( 5 )

[connection signal="body_entered" from="message" to="." method="_on_message_body_entered"]
[connection signal="body_exited" from="message" to="." method="_on_message_body_exited"]
[connection signal="body_entered" from="juru kunci" to="." method="_on_juru_kunci_body_entered"]
[connection signal="body_exited" from="juru kunci" to="." method="_on_juru_kunci_body_exited"]
